--- a/footer.html
+++ b/footer.html
@@ -1,28 +1,137 @@
-<div class="footer-container">
-    <div class="footer-about">
-        <h3>About BookStore</h3>
-        <p>Your one-stop online shop for all your favorite books. Discover, read, and enjoy!</p>
-    </div>
+<style>
+    /* =========================================
+       COMPACT FOOTER STYLES
+       ========================================= */
+    footer {
+        background-color: #2c3e50 !important;
+        color: white !important;
+        padding: 25px 0 15px 0 !important; /* Reduced padding */
+        margin-top: auto !important;
+        font-family: "Segoe UI", Arial, sans-serif !important;
+        width: 100%;
+    }
 
-    <div class="footer-links">
-        <h3>Quick Links</h3>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-    </div>
+    .footer-container {
+        max-width: 900px; /* Narrower container */
+        margin: 0 auto !important;
+        display: flex !important;
+        justify-content: space-between !important;
+        flex-wrap: wrap !important;
+        gap: 20px !important; /* Reduced gap */
+        padding: 0 20px !important;
+    }
 
-    <div class="footer-social">
-        <h3>Follow Us</h3>
-        <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+    .footer-about, .footer-links, .footer-social {
+        flex: 1 !important;
+        min-width: 200px !important;
+    }
+
+    footer h3 {
+        font-size: 1rem !important; /* Smaller titles */
+        margin-bottom: 12px !important;
+        color: #3498db !important;
+        font-weight: bold !important;
+    }
+
+    footer p {
+        font-size: 0.85rem !important; /* Smaller text */
+        line-height: 1.4 !important;
+        color: #bdc3c7 !important;
+        margin: 0 !important;
+    }
+
+    .footer-links ul {
+        list-style: none !important;
+        padding: 0 !important;
+        margin: 0 !important;
+    }
+
+    .footer-links ul li {
+        margin-bottom: 6px !important; /* Tighter list spacing */
+    }
+
+    .footer-links ul li a {
+        font-size: 0.85rem !important;
+        color: #bdc3c7 !important;
+        text-decoration: none !important;
+        transition: color 0.3s ease !important;
+    }
+
+    .footer-links ul li a:hover {
+        color: white !important;
+    }
+
+    .social-icons {
+        display: flex !important;
+        gap: 10px !important;
+        align-items: center !important;
+    }
+
+    .social-icons a {
+        color: #bdc3c7 !important;
+        text-decoration: none !important;
+        border: 1px solid #bdc3c7 !important;
+        padding: 2px 6px !important; /* Smaller icon boxes */
+        border-radius: 4px !important;
+        font-size: 0.75rem !important;
+        font-weight: bold !important;
+        transition: all 0.3s ease !important;
+    }
+
+    .social-icons a:hover {
+        color: white !important;
+        border-color: white !important;
+        background-color: rgba(255, 255, 255, 0.1) !important;
+    }
+
+    .footer-bottom {
+        text-align: center !important;
+        border-top: 1px solid rgba(255, 255, 255, 0.1) !important;
+        margin-top: 20px !important; /* Reduced margin */
+        padding-top: 10px !important; /* Reduced padding */
+        font-size: 0.75rem !important; /* Smaller copyright */
+        color: #7f8c8d !important;
+    }
+
+    @media screen and (max-width: 600px) {
+        .footer-container {
+            flex-direction: column !important;
+            text-align: center !important;
+            gap: 15px !important;
+        }
+        .social-icons {
+            justify-content: center !important;
+        }
+    }
+</style>
+
+<footer>
+    <div class="footer-container">
+        <div class="footer-about">
+            <h3>BookStore</h3>
+            <p>Your one-stop shop for stories. Discover, read, and enjoy.</p>
+        </div>
+
+        <div class="footer-links">
+            <h3>Quick Links</h3>
+            <ul>
+                <li><a href="index.php">Home</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+
+        <div class="footer-social">
+            <h3>Follow Us</h3>
+            <div class="social-icons">
+                <a href="#" title="Facebook">FB</a>
+                <a href="#" title="Twitter">𝕏</a>
+                <a href="#" title="Instagram">IG</a>
+            </div>
         </div>
     </div>
-</div>
 
-<div class="footer-bottom">
-    <p>&copy; 2025 BookStore. All rights reserved.</p>
-</div>
+    <div class="footer-bottom">
+        <p>&copy; 2025 BookStore. All rights reserved.</p>
+    </div>
+</footer>
