changed bookstore name to 67 bs

--- a/footer.html
+++ b/footer.html
@@ -83,7 +83,7 @@
     <div class="footer-container">
         <!-- Column 1: Description -->
         <div class="footer-about">
-            <h3>BookStore</h3>
+            <h3>SIX SEVEN BS</h3>
             <p>Your premier destination for literature and learning. We offer a curated selection of books across all genres to inspire your next reading adventure.</p>
         </div>
 
@@ -91,12 +91,12 @@
         <div class="footer-contact">
             <h3>Customer Service</h3>
             <p><strong>Hotline:</strong> +60 3-1234 5678</p>
-            <p><strong>Email:</strong> support@bookstore.com</p>
+            <p><strong>Email:</strong> support@sixsevenbs.com</p>
             <p><strong>Mon-Fri:</strong> 9:00 AM - 6:00 PM</p>
         </div>
     </div>
 
     <div class="footer-bottom">
-        <p>&copy; 2025 BookStore. All rights reserved.</p>
+        <p>&copy; 2025 SIX SEVEN BS. All rights reserved.</p>
     </div>
 </footer>
