--- a/footer.html
+++ b/footer.html
@@ -87,9 +87,9 @@
             <p>Your premier destination for literature and learning. We offer a curated selection of books across all genres to inspire your next reading adventure.</p>
         </div>
 
-        <!-- Column 2: Customer Service -->
+        <!-- Column 2: Member Services -->
         <div class="footer-contact">
-            <h3>Customer Service</h3>
+            <h3>Member Services</h3>
             <p><strong>Hotline:</strong> +60 3-1234 5678</p>
             <p><strong>Email:</strong> support@sixsevenbs.com</p>
             <p><strong>Mon-Fri:</strong> 9:00 AM - 6:00 PM</p>
